--- a/contacts.html
+++ b/contacts.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Lora:400,500,600,700,400i,500i,600i,700i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,500,600,700,400i,500i,600i,700i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=vhsJ7e"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=vhsJ7e" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=MX5b86"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=MX5b86" type="text/css">
 
   
   
@@ -101,7 +101,7 @@
           <div class="card-box align-left">
             
             
-            <p class="card-text mbr-fonts-style mb-3 display-7">Monday  to Friday 9 a.m.–6 p.m.<br>Closed on Saturdays &amp; Sundays<br><br><br>Call us or book online for appointments. <br>If you have any other questions, you can contact us through one of the methods below:<br><br><br>0449 170 111<br>example@gmail.com<br>4 CORTON RD, SUBIACO 6045 - next to 844 bookbinding<br><br></p>
+            <p class="card-text mbr-fonts-style mb-3 display-7">Monday  to Friday 9 a.m.–6 p.m.<br>Closed on Saturdays &amp; Sundays<br><br><br>Call us or book online for appointments. <br>If you have any other questions, you can contact us through one of the methods below:<br><br><br>0449 170 054<br>fremgamassage@gmail.com<br>4 EXE CT, BEECHBORO 6063 - next to FEG bookbinding<br><br></p>
             <div class="mbr-section-btn mt-2 item-footer mt-2"><a href="https://book.carepatron.com/Feelingood-Massage-Therapy/Francesco-Emanuele?p=Jd2XtkF1TaW5lGc.x242Yg&s=GuqKRIvF" class="btn btn-primary item-btn display-7" target="_blank">Book an appointment</a></div>
           </div>
         </div>
@@ -126,6 +126,12 @@
             </div>
         </div>
     </div>
+<script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  
+<script src="assets/parallax/jarallax.js"></script>  
+<script src="assets/smoothscroll/smooth-scroll.js"></script>  
+<script src="assets/ytplayer/index.js"></script>  
+<script src="assets/dropdown/js/navbar-dropdown.js"></script>  
+<script src="assets/theme/js/script.js"></script>
   
   
 </body>
