--- a/services.html
+++ b/services.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Lora:400,500,600,700,400i,500i,600i,700i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,500,600,700,400i,500i,600i,700i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=nEjkN7"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=nEjkN7" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=RAdxVu"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=RAdxVu" type="text/css">
 
   
   
@@ -36,10 +36,10 @@
 			<div class="navbar-brand">
 				<span class="navbar-logo">
 					<a href="index.html">
-						<img src="assets/images/logo-600.png" alt="Mobirise Website Builder" style="height: 4.1rem;">
+						<img src="assets/images/logo-600.png" alt="Home" style="height: 5rem;">
 					</a>
 				</span>
-				<span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-4" href="index.html">Feelingood Massage Therapy<br></a></span>
+				
 			</div>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				<div class="hamburger">
@@ -195,16 +195,13 @@
             </div>
         </div>
     </div>
-
 <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  
 <script src="assets/parallax/jarallax.js"></script>  
 <script src="assets/smoothscroll/smooth-scroll.js"></script>  
 <script src="assets/ytplayer/index.js"></script>  
 <script src="assets/dropdown/js/navbar-dropdown.js"></script>  
 <script src="assets/mbr-tabs/mbr-tabs.js"></script>  
-<script src="assets/theme/js/script.js"></script>  
-
-
+<script src="assets/theme/js/script.js"></script> 
   
   
 </body>
