--- a/about.html
+++ b/about.html
@@ -70,13 +70,20 @@
   <!-- Body -->
   <section class="content-description">
     <p>
-      I'm Francesco Gabba, a dedicated, skilled and qualified remedial massage therapist with a passion for helping individuals achieve optimal health and well-being. I specialize in providing personalized massage treatments tailored to address your unique needs, whether you're dealing with injuries, chronic pain, or simply seeking relaxation.<br><br>
+      I'm <span id="name"></span>, a dedicated, skilled and qualified remedial massage therapist with a passion for helping individuals achieve optimal health and well-being. I specialize in providing personalized massage treatments tailored to address your unique needs, whether you're dealing with injuries, chronic pain, or simply seeking relaxation.<br><br>
       My approach combines a deep understanding of anatomy and physiology with various massage techniques and tools to promote healing and alleviate discomfort. I believe in the power of touch and the body's ability to heal itself, and I strive to create a safe and nurturing environment for my clients.<br><br>
       I am committed to ongoing education and staying updated on the latest techniques and practices in the field of remedial massage therapy. This allows me to offer you the most effective treatments possible.<br><br>
       Your well-being is my priority, and I am excited to partner with you on your journey to recovery and relaxation. Whether you're an athlete looking to enhance performance, someone recovering from an injury, or simply in need of some self-care, I am here to support you every step of the way.<br><br>
       Thank you for considering me as your massage therapist. I look forward to working with you! 
     </p>
   </section>
+
+  <script>
+  const first = "Francesco";
+  const last = "Gabba";
+  const name = `${first} ${last}`;
+  document.getElementById("name").innerHTML = name;
+  </script>
 
 
   <!-- Footer -->
