--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Ready to feel better? Book your massage or ask a question — contact Feelingood Massage Therapy in Beechboro, Perth today.">
 
   <!-- Canonical URL (optional but useful) -->
-  <link rel="canonical" href="https://www.feelingoodmassagetherapy.com.au/" />
+  <link rel="canonical" href="https://www.feelingoodmassagetherapy.com.au/contact.html" />
 
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="image/icon/apple-touch-icon.png">
@@ -45,7 +45,7 @@
   <header class="navbar">
     <a href="index.html">
       <div class="logo">
-          <img src="image/logo.png" alt="Logo" />
+          <img src="image/logo.svg" alt="Logo" />
       </div>
     </a>
     <button class="menu-toggle" id="menuToggle">&#9776;</button>
@@ -57,7 +57,7 @@
   </header>
 
   <!-- HERO SECTION -->
-<section class="hero-contact" style="background-image: url('image/logo.png')">
+<section class="hero-contact" style="background-image: url('image/logo.svg')">
   <div class="hero-overlay"></div>
   <div class="hero-text">
    <div class="hero-heading">
@@ -76,11 +76,12 @@
     <br>
     <p>If you have any questions, you can contact us via email:</p>
     <br>
-    
+
+    <span id="phon-e"></span>
     <script>
   const country = "+61";        
-  const area = "449";           
-  const number = "170054";      
+  const area = "459";           
+  const number = "178974";      
   const phone = `${country} ${area} ${number}`;
   document.getElementById("phone").innerHTML = `<a href="tel:${country}${area}${number}">${phone}</a>`;
 </script>
