--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Explore our massage treatments including cupping, dry needling, trigger point, myofascial release, and hot stones — tailored to your recovery.">
 
   <!-- Canonical URL (optional but useful) -->
-  <link rel="canonical" href="https://www.feelingoodmassagetherapy.com.au/" />
+  <link rel="canonical" href="https://www.feelingoodmassagetherapy.com.au/services.html" />
 
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="image/icon/apple-touch-icon.png">
@@ -44,7 +44,7 @@
   <header class="navbar">
     <a href="index.html">
       <div class="logo">
-          <img src="image/logo.png" alt="Logo" />
+          <img src="image/logo.svg" alt="Logo" />
       </div>
     </a>
     <button class="menu-toggle" id="menuToggle">&#9776;</button>
