--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Learn about the philosophy and purpose behind Feelingood Massage Therapy — where evidence-based treatments meet personalised care and support.">
 
   <!-- Canonical URL (optional but useful) -->
-  <link rel="canonical" href="https://www.feelingoodmassagetherapy.com.au/" />
+  <link rel="canonical" href="https://www.feelingoodmassagetherapy.com.au/about.html" />
 
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="image/icon/apple-touch-icon.png">
@@ -44,7 +44,7 @@
   <header class="navbar">
     <a href="index.html">
       <div class="logo">
-          <img src="image/logo.png" alt="Logo" />
+          <img src="image/logo.svg" alt="Logo" />
       </div>
     </a>
     <button class="menu-toggle" id="menuToggle">&#9776;</button>
@@ -56,7 +56,7 @@
   </header>
 
   <!-- HERO SECTION -->
-<section class="hero-about" style="background-image: url('image/about.png')">
+<section class="hero-about" style="background-image: url('image/about.jpg')">
   <div class="hero-overlay"></div>
   <div class="hero-text">
     <div class="hero-heading">
