--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <header class="navbar">
     <a href="index.html">
       <div class="logo">
-          <img src="image/logo.png" alt="Logo" />
+          <img src="image/logo.svg" alt="Logo" />
       </div>
     </a>
     <button class="menu-toggle" id="menuToggle">&#9776;</button>
