--- a/about.html
+++ b/about.html
@@ -1,46 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <!-- Basic Meta Tags -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About | Remedial & Relaxation in Beechboro, Perth<</title>
-  <meta name="description" content="Learn about the philosophy and purpose behind Feelingood Massage Therapy — where evidence-based treatments meet personalised care and support.">
-
-  <!-- Canonical URL (optional but useful) -->
-  <link rel="canonical" href="https://www.feelingoodmassagetherapy.com.au/about.html" />
-
-  <!-- Favicon -->
-  <link rel="apple-touch-icon" sizes="180x180" href="image/icon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="image/icon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="image/icon/favicon-16x16.png">
-  <link rel="manifest" href="image/icon/site.webmanifest">
-  <!-- CSS -->
+  <title>New Site</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;1,400&display=swap" rel="stylesheet">
-
-  <!-- Open Graph (Facebook, LinkedIn, etc.) -->
-  <meta property="og:title" content="About - Feelingood Massage Therapy" />
-  <meta property="og:description" content="Learn about my approach as a Remedial Massage Therapist and how I tailor treatments to support your recovery and well-being." />
-  <meta property="og:image" content="https://www.feelingoodmassagetherapy.com.au/image/og-image.jpg" />
-  <meta property="og:url" content="https://www.feelingoodmassagetherapy.com.au/" />
-  <meta property="og:type" content="website" />
-
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Feelingood Massage Therapy" />
-  <meta name="twitter:description" content="Learn about my approach as a Remedial Massage Therapist and how I tailor treatments to support your recovery and well-being." />
-  <meta name="twitter:image" content="https://www.feelingoodmassagetherapy.com.au/image/og-image.jpg" />
-
-  <!-- Keywords (optional, but not heavily used by Google) -->
-  <meta name="keywords" content="remedial massage therapy, cupping, dry needling, myofascial release, trigger point, hot stone, Beechboro, Perth" />
-
-  <!-- Author (optional) -->
-  <meta name="author" content="Feelingood Massage Therapy" />
 </head>
 <body>
 
+  <!-- Navigation -->
   <header class="navbar">
     <a href="index.html">
       <div class="logo">
@@ -55,17 +23,17 @@
     </nav>
   </header>
 
-  <!-- HERO SECTION -->
-<section class="hero-about" style="background-image: url('image/about.jpg')">
-  <div class="hero-overlay"></div>
-  <div class="hero-text">
-    <div class="hero-heading">
-      <h1>About</h1>
+  <!-- Hero Section -->
+  <section class="hero hero-about" style="background-image: url('image/about.jpg')">
+    <div class="hero-overlay"></div>
+    <div class="hero-text">
+      <div class="hero-heading">
+        <h1>About</h1>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<h2 class="sub-hero-h2">Welcome!</h2>
+  <h2 class="sub-hero-h2">Welcome!</h2>
 
   <!-- Body -->
   <section class="content-description">
@@ -85,13 +53,7 @@
   document.getElementById("name").innerHTML = name;
   </script>
 
-
-  <!-- Footer -->
-  <footer class="site-footer">
-    <p>&copy; 2025 Feelingood Massage Therapy. All rights reserved.</p>
-  </footer>
-
-  <script>
+    <script>
     const menuToggle = document.getElementById("menuToggle");
     const navLinks = document.getElementById("navLinks");
 
