--- a/contact.html
+++ b/contact.html
@@ -1,47 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <!-- Basic Meta Tags -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact | Book Massage at Feelingood Massage Therapy</title>
-  <meta name="description" content="Ready to feel better? Book your massage or ask a question — contact Feelingood Massage Therapy in Beechboro, Perth today.">
-
-  <!-- Canonical URL (optional but useful) -->
-  <link rel="canonical" href="https://www.feelingoodmassagetherapy.com.au/contact.html" />
-
-  <!-- Favicon -->
-  <link rel="apple-touch-icon" sizes="180x180" href="image/icon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="image/icon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="image/icon/favicon-16x16.png">
-  <link rel="manifest" href="image/icon/site.webmanifest">
-
-  <!-- CSS -->
+  <title>New Site</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;1,400&display=swap" rel="stylesheet">
-
-  <!-- Open Graph (Facebook, LinkedIn, etc.) -->
-  <meta property="og:title" content="Contact - Feelingood Massage Therapy" />
-  <meta property="og:description" content="Book your massage or ask a question. Get in touch with Feelingood Massage Therapy in Perth today." />
-  <meta property="og:image" content="https://www.feelingoodmassagetherapy.com.au/image/og-image.jpg" />
-  <meta property="og:url" content="https://www.feelingoodmassagetherapy.com.au/" />
-  <meta property="og:type" content="website" />
-
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Feelingood Massage Therapy" />
-  <meta name="twitter:description" content="Book your massage or ask a question. Get in touch with Feelingood Massage Therapy in Perth today." />
-  <meta name="twitter:image" content="https://www.feelingoodmassagetherapy.com.au/image/og-image.jpg" />
-
-  <!-- Keywords (optional, but not heavily used by Google) -->
-  <meta name="keywords" content="remedial massage therapy, cupping, dry needling, myofascial release, trigger point, hot stone, Beechboro, Perth" />
-
-  <!-- Author (optional) -->
-  <meta name="author" content="Feelingood Massage Therapy" />
 </head>
 <body>
 
+  <!-- Navigation -->
   <header class="navbar">
     <a href="index.html">
       <div class="logo">
@@ -56,17 +23,17 @@
     </nav>
   </header>
 
-  <!-- HERO SECTION -->
-<section class="hero-contact" style="background-image: url('image/logo.svg')">
-  <div class="hero-overlay"></div>
-  <div class="hero-text">
-   <div class="hero-heading">
-      <h1>Contact us</h1>
+  <!-- Hero Section -->
+  <section class="hero hero-contact" style="background-image: url('image/logo.svg')">
+    <div class="hero-overlay"></div>
+    <div class="hero-text">
+      <div class="hero-heading">
+        <h1>Contact us</h1>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
-  <!-- Body -->
+    <!-- Body -->
 <h2 class="sub-hero-h2">Hours and appointments</h2>
 
   <!-- Body -->
@@ -115,6 +82,7 @@
       menuToggle.innerHTML = navLinks.classList.contains("show") ? "&times;" : "&#9776;";
     });
   </script>
+
 
 </body>
 </html>
