--- a/services.html
+++ b/services.html
@@ -1,10 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+ <!-- Basic Meta Tags -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>New Site</title>
+  <title>Services | Cupping, Dry Needling, Remedial Massage in Perth</title>
+  <meta name="description" content="Explore our massage treatments including cupping, dry needling, trigger point, myofascial release, and hot stones — tailored to your recovery.">
+
+  <!-- Canonical URL (optional but useful) -->
+  <link rel="canonical" href="https://www.feelingoodmassagetherapy.com.au/services.html" />
+
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="image/icon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="image/icon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="image/icon/favicon-16x16.png">
+  <link rel="manifest" href="image/icon/site.webmanifest">
+  <!-- CSS -->
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;1,400&display=swap" rel="stylesheet">
+
+  <!-- Open Graph (Facebook, LinkedIn, etc.) -->
+  <meta property="og:title" content="Services - Feelingood Massage Therapy" />
+  <meta property="og:description" content="Explore massage treatments like cupping, dry needling, myofascial release, trigger points and hot stones — designed for pain relief and healing." />
+  <meta property="og:image" content="https://www.feelingoodmassagetherapy.com.au/image/og-image.jpg" />
+  <meta property="og:url" content="https://www.feelingoodmassagetherapy.com.au/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Feelingood Massage Therapy" />
+  <meta name="twitter:description" content="Explore massage treatments like cupping, dry needling, myofascial release, trigger points and hot stones — designed for pain relief and healing." />
+  <meta name="twitter:image" content="https://www.feelingoodmassagetherapy.com.au/image/og-image.jpg" />
+
+  <!-- Keywords (optional, but not heavily used by Google) -->
+  <meta name="keywords" content="remedial massage therapy, cupping, dry needling, myofascial release, trigger point, hot stone,Beechboro, Perth" />
+
+  <!-- Author (optional) -->
+  <meta name="author" content="Feelingood Massage Therapy" />
 </head>
 <body>
 
