--- a/about.html
+++ b/about.html
@@ -4,11 +4,11 @@
  <!-- Basic Meta Tags -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About | Remedial & Relaxation in Beechboro, Perth<</title>
-  <meta name="description" content="Learn about the philosophy and purpose behind Feelingood Massage Therapy — where evidence-based treatments meet personalised care and support.">
+  <title>About | Remedial & Relaxation massage in Morley and Beechboro, Perth<</title>
+  <meta name="description" content="Learn about the philosophy and purpose behind Advanced Clinical Body Therapy — where evidence-based treatments meet personalised care and support.">
 
   <!-- Canonical URL (optional but useful) -->
-  <link rel="canonical" href="https://www.feelingoodmassagetherapy.com.au/about.html" />
+  <link rel="canonical" href="https://www.advancedclinicalbodytherapy.com.au/about.html" />
 
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="image/icon/apple-touch-icon.png">
@@ -21,23 +21,23 @@
   <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;1,400&display=swap" rel="stylesheet">
 
   <!-- Open Graph (Facebook, LinkedIn, etc.) -->
-  <meta property="og:title" content="About - Feelingood Massage Therapy" />
+  <meta property="og:title" content="About - Advanced Clinical Body Therapy" />
   <meta property="og:description" content="Learn about my approach as a Remedial Massage Therapist and how I tailor treatments to support your recovery and well-being." />
-  <meta property="og:image" content="https://www.feelingoodmassagetherapy.com.au/image/og-image.jpg" />
-  <meta property="og:url" content="https://www.feelingoodmassagetherapy.com.au/" />
+  <meta property="og:image" content="https://www.advancedclinicalbodytherapy.com.au/image/og-image.jpg" />
+  <meta property="og:url" content="https://www.advancedclinicalbodytherapy.com.au/" />
   <meta property="og:type" content="website" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Feelingood Massage Therapy" />
+  <meta name="twitter:title" content="Advanced Clinical Body Therapy" />
   <meta name="twitter:description" content="Learn about my approach as a Remedial Massage Therapist and how I tailor treatments to support your recovery and well-being." />
-  <meta name="twitter:image" content="https://www.feelingoodmassagetherapy.com.au/image/og-image.jpg" />
+  <meta name="twitter:image" content="https://www.advancedclinicalbodytherapy.com.au/image/og-image.jpg" />
 
   <!-- Keywords (optional, but not heavily used by Google) -->
   <meta name="keywords" content="remedial massage therapy, cupping, dry needling, myofascial release, trigger point, hot stone, Beechboro, Perth" />
 
   <!-- Author (optional) -->
-  <meta name="author" content="Feelingood Massage Therapy" />
+  <meta name="author" content="Advanced Clinical Body Therapy" />
 </head>
 <body>
 
@@ -95,6 +95,11 @@
       menuToggle.innerHTML = navLinks.classList.contains("show") ? "&times;" : "&#9776;";
     });
   </script>
+
+  <!-- Footer -->
+  <footer class="site-footer">
+    <p>&copy; 2025 Advanced Clinical Body Therapy. All rights reserved.</p>
+  </footer>
 
 </body>
 </html>
