--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
  <!-- Basic Meta Tags -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Feelingood Massage Therapy | Remedial & Relaxation in Perth</title>
+  <title>Advanced Clinical Body Therapy | Remedial & Relaxation massage in Perth</title>
   <meta name="description" content="As a skilled Remedial Massage Therapist in Perth, I provide personalised care for pain and injury using cupping, dry needling, trigger point, and myofascial release.">
 
   <!-- Canonical URL (optional but useful) -->
-  <link rel="canonical" href="https://www.feelingoodmassagetherapy.com.au/" />
+  <link rel="canonical" href="https://www.advancedclinicalbodytherapy.com.au/" />
 
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="image/icon/apple-touch-icon.png">
@@ -22,23 +22,23 @@
   <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;1,400&display=swap" rel="stylesheet">
 
   <!-- Open Graph (Facebook, LinkedIn, etc.) -->
-  <meta property="og:title" content="Feelingood Massage Therapy" />
+  <meta property="og:title" content="Advanced Clinical Body Therapy" />
   <meta property="og:description" content="Experience tailored massage treatments in Perth including cupping, dry needling, trigger point, myofascial release and hot stone therapy." />
-  <meta property="og:image" content="https://www.feelingoodmassagetherapy.com.au/image/og-image.jpg" />
-  <meta property="og:url" content="https://www.feelingoodmassagetherapy.com.au/" />
+  <meta property="og:image" content="https://www.advancedclinicalbodytherapy.com.au/image/og-image.jpg" />
+  <meta property="og:url" content="https://www.advancedclinicalbodytherapy.com.au/" />
   <meta property="og:type" content="website" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Feelingood Massage Therapy" />
+  <meta name="twitter:title" content="Advanced Clinical Body Therapy" />
   <meta name="twitter:description" content="Experience tailored massage treatments in Perth including cupping, dry needling, trigger point, myofascial release and hot stone therapy." />
-  <meta name="twitter:image" content="https://www.feelingoodmassagetherapy.com.au/image/og-image.jpg" />
+  <meta name="twitter:image" content="https://www.advancedclinicalbodytherapy.com.au/image/og-image.jpg" />
 
   <!-- Keywords (optional, but not heavily used by Google) -->
   <meta name="keywords" content="remedial massage therapy, cupping, dry needling, myofascial release, trigger point, hot stone, Beechboro, Perth" />
 
   <!-- Author (optional) -->
-  <meta name="author" content="Feelingood Massage Therapy" />
+  <meta name="author" content="Advanced Clinical Body Therapy" />
 </head>
 <body>
 
@@ -62,10 +62,14 @@
     <div class="hero-overlay"></div>
     <div class="hero-text">
       <div class="hero-heading">
-        <h1>Feelingood Massage Therapy</h1>
+        <h1>ADVANCED</h1>
       </div>
        <div class="hero-subheading">
-        <h2>Specialist in body rehabilitation</h2>
+        <h2>
+          <b>CLINICAL</b>
+          <br>
+          BODY THERAPY
+        </h2>
       </div>
     </div>
   </section>
@@ -84,7 +88,7 @@
 
   <!-- Footer -->
   <footer class="site-footer">
-    <p>&copy; 2025 Feelingood Massage Therapy. All rights reserved.</p>
+    <p>&copy; 2025 Advanced Clinical Body Therapy. All rights reserved.</p>
   </footer>
 
     <script>
