--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,11 @@
  <!-- Basic Meta Tags -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact | Book Massage at Feelingood Massage Therapy</title>
-  <meta name="description" content="Ready to feel better? Book your massage or ask a question — contact Feelingood Massage Therapy in Beechboro, Perth today.">
+  <title>Contact | Book Massage at Advanced Clinical Body Therapy</title>
+  <meta name="description" content="Ready to feel better? Book your massage or ask a question — contact Advanced Clinical Body Therapy in Beechboro, Perth today.">
 
   <!-- Canonical URL (optional but useful) -->
-  <link rel="canonical" href="https://www.feelingoodmassagetherapy.com.au/contact.html" />
+  <link rel="canonical" href="https://www.advancedclinicalbodytherapy.com.au/contact.html" />
 
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="image/icon/apple-touch-icon.png">
@@ -22,23 +22,23 @@
   <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;1,400&display=swap" rel="stylesheet">
 
   <!-- Open Graph (Facebook, LinkedIn, etc.) -->
-  <meta property="og:title" content="Contact - Feelingood Massage Therapy" />
-  <meta property="og:description" content="Book your massage or ask a question. Get in touch with Feelingood Massage Therapy in Perth today." />
-  <meta property="og:image" content="https://www.feelingoodmassagetherapy.com.au/image/og-image.jpg" />
-  <meta property="og:url" content="https://www.feelingoodmassagetherapy.com.au/" />
+  <meta property="og:title" content="Contact - Advanced Clinical Body Therapy" />
+  <meta property="og:description" content="Book your massage or ask a question. Get in touch with Advanced Clinical Body Therapy in Perth today." />
+  <meta property="og:image" content="https://www.advancedclinicalbodytherapy.com.au/image/og-image.jpg" />
+  <meta property="og:url" content="https://www.advancedclinicalbodytherapy.com.au/" />
   <meta property="og:type" content="website" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Feelingood Massage Therapy" />
-  <meta name="twitter:description" content="Book your massage or ask a question. Get in touch with Feelingood Massage Therapy in Perth today." />
-  <meta name="twitter:image" content="https://www.feelingoodmassagetherapy.com.au/image/og-image.jpg" />
+  <meta name="twitter:title" content="Advanced Clinical Body Therapy" />
+  <meta name="twitter:description" content="Book your massage or ask a question. Get in touch with Advanced Clinical Body Therapy in Perth today." />
+  <meta name="twitter:image" content="https://www.advancedclinicalbodytherapy.com.au/image/og-image.jpg" />
 
   <!-- Keywords (optional, but not heavily used by Google) -->
   <meta name="keywords" content="remedial massage therapy, cupping, dry needling, myofascial release, trigger point, hot stone, Beechboro, Perth" />
 
   <!-- Author (optional) -->
-  <meta name="author" content="Feelingood Massage Therapy" />
+  <meta name="author" content="Advanced Clinical Body Therapy" />
 </head>
 <body>
 
@@ -58,7 +58,7 @@
   </header>
 
   <!-- Hero Section -->
-  <section class="hero hero-contact" style="background-image: url('image/logo.svg')">
+  <section class="hero hero-index">
     <div class="hero-overlay"></div>
     <div class="hero-text">
       <div class="hero-heading">
@@ -72,13 +72,12 @@
 
   <!-- Body -->
   <section class="content-description-contact">
-    <p>Monday to Friday 9 a.m.&ndash;6p.m.</p>
-    <p>Closed on Saturdays & Sundays</p>
+    <p>By appointments only on Friday 2 p.m.&ndash; 6:30p.m.</p>
     <br>
     <p>If you have any questions, you can contact us via email:</p>
     <br>
 
-    <span id="phon-e"></span>
+    <span id="phone"></span>
     <script>
   const country = "+61";        
   const area = "459";           
@@ -90,8 +89,8 @@
     <span id="email"></span>
 
       <script>
-        const user = "fremgamassage";
-        const domain = "gmail.com";
+        const user = "info";
+        const domain = "advancedclinicalbodytherapy.com.au";
         const email = `${user}@${domain}`;
         document.getElementById("email").innerHTML = `<a href="mailto:${email}">${email}</a>`;
       </script>
@@ -102,9 +101,42 @@
     <button class="cta-button"><a href="https://book.carepatron.com/Feelingood-Massage-Therapy/Francesco-Emanuele?p=Jd2XtkF1TaW5lGc.x242Yg&s=GuqKRIvF" target="_blank" rel="noopener noreferrer">Book an appointment</a></button>
   </section>
 
+  <!-- contact.html -->
+<section class="map">
+
+  <!-- OPTIONAL: address details -->
+  <p>254 Beechboro Rd N, Morley WA 6062</p>
+
+  <!-- MAP EMBED -->
+  <div class="map-wrapper" style="max-width:100%;height:400px;">
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3388.4026981272204!2d115.92688607655147!3d-31.8684652182531!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2a32b19b0a941367%3A0xa9f4154821b76adb!2sFEG%20BOOKBINDING!5e0!3m2!1sen!2sau!4v1762330170605!5m2!1sen!2sau"
+      width="100%"
+      height="100%"
+      style="border:0;"
+      allowfullscreen=""
+      loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+  </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   <!-- Footer -->
   <footer class="site-footer">
-    <p>&copy; 2025 Feelingood Massage Therapy. All rights reserved.</p>
+    <p>&copy; 2025 Advanced Clinical Body Therapy. All rights reserved.</p>
   </footer>
 
   <script>
