--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Explore our massage treatments including cupping, dry needling, trigger point, myofascial release, and hot stones — tailored to your recovery.">
 
   <!-- Canonical URL (optional but useful) -->
-  <link rel="canonical" href="https://www.feelingoodmassagetherapy.com.au/services.html" />
+  <link rel="canonical" href="https://www.advancedclinicalbodytherapy.com.au/services.html" />
 
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="image/icon/apple-touch-icon.png">
@@ -21,23 +21,23 @@
   <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;1,400&display=swap" rel="stylesheet">
 
   <!-- Open Graph (Facebook, LinkedIn, etc.) -->
-  <meta property="og:title" content="Services - Feelingood Massage Therapy" />
+  <meta property="og:title" content="Services - Advanced Clinical Body Therapy" />
   <meta property="og:description" content="Explore massage treatments like cupping, dry needling, myofascial release, trigger points and hot stones — designed for pain relief and healing." />
-  <meta property="og:image" content="https://www.feelingoodmassagetherapy.com.au/image/og-image.jpg" />
-  <meta property="og:url" content="https://www.feelingoodmassagetherapy.com.au/" />
+  <meta property="og:image" content="https://www.advancedclinicalbodytherapy.com.au/image/og-image.jpg" />
+  <meta property="og:url" content="https://www.advancedclinicalbodytherapy.com.au/" />
   <meta property="og:type" content="website" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Feelingood Massage Therapy" />
+  <meta name="twitter:title" content="Advanced Clinical Body Therapy" />
   <meta name="twitter:description" content="Explore massage treatments like cupping, dry needling, myofascial release, trigger points and hot stones — designed for pain relief and healing." />
-  <meta name="twitter:image" content="https://www.feelingoodmassagetherapy.com.au/image/og-image.jpg" />
+  <meta name="twitter:image" content="https://www.advancedclinicalbodytherapy.com.au/image/og-image.jpg" />
 
   <!-- Keywords (optional, but not heavily used by Google) -->
   <meta name="keywords" content="remedial massage therapy, cupping, dry needling, myofascial release, trigger point, hot stone,Beechboro, Perth" />
 
   <!-- Author (optional) -->
-  <meta name="author" content="Feelingood Massage Therapy" />
+  <meta name="author" content="Advanced Clinical Body Therapy" />
 </head>
 <body>
 
@@ -183,7 +183,7 @@ Trigger point therapy offers a targeted, effective approach to managing pain and
 
   <!-- Footer -->
   <footer class="site-footer">
-    <p>&copy; 2025 Feelingood Massage Therapy. All rights reserved.</p>
+    <p>&copy; 2025 Advanced Clinical Body Therapy. All rights reserved.</p>
   </footer>
 
   <script>
