--- a/contact.html
+++ b/contact.html
@@ -74,18 +74,19 @@
   <section class="content-description-contact">
     <p>By appointments only on Friday 2 p.m.&ndash; 6:30p.m.</p>
     <br>
-    <p>If you have any questions, you can contact us via email:</p>
+    <p>If you have any questions, you can contact us via phone or email:</p>
     <br>
 
     <span id="phone"></span>
     <script>
-  const country = "+61";        
-  const area = "459";           
-  const number = "178974";      
+  const country = "(08)";        
+  const area = "9378";           
+  const number = "1288";      
   const phone = `${country} ${area} ${number}`;
   document.getElementById("phone").innerHTML = `<a href="tel:${country}${area}${number}">${phone}</a>`;
 </script>
 
+<br>
     <span id="email"></span>
 
       <script>
@@ -105,12 +106,14 @@
 <section class="map">
 
   <!-- OPTIONAL: address details -->
-  <p>254 Beechboro Rd N, Morley WA 6062</p>
+  <p>254 Beechboro Rd N, room 1, Morley WA 6062</p>
+
+  <br>
 
   <!-- MAP EMBED -->
   <div class="map-wrapper" style="max-width:100%;height:400px;">
     <iframe
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3388.4026981272204!2d115.92688607655147!3d-31.8684652182531!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2a32b19b0a941367%3A0xa9f4154821b76adb!2sFEG%20BOOKBINDING!5e0!3m2!1sen!2sau!4v1762330170605!5m2!1sen!2sau"
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d211.71657562776545!2d115.92441410646494!3d-31.893955219332124!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2a32b0a1f48e51f7%3A0xea9e68c889efa8f6!2sBayswater%20Allied%20Health!5e0!3m2!1sen!2sau!4v1762849409464!5m2!1sen!2sau"
       width="100%"
       height="100%"
       style="border:0;"
@@ -120,18 +123,6 @@
     </iframe>
   </div>
 </section>
-
-
-
-
-
-
-
-
-
-
-
-
 
 
   <!-- Footer -->
