--- a/services.html
+++ b/services.html
@@ -74,7 +74,7 @@
     <p>
       Remedial massage is a hands-on treatment that serves as a complementary therapy for various conditions affecting the muscles, tendons, and ligaments of the body. It is used to alleviate pain, improve mobility, treat musculoskeletal injuries, and promote overall well-being.<br><br>
       It focuses on identifying and treating specific areas of tension and discomfort in the body, using a variety of techniques and assessment tailored to each individual's needs.<br><br>
-      The treatments may incorporate various modalities to enhance the effectiveness of the massage and address your specific concerns. These modalities include Trigger Point Therapy, Cupping, Dry Needling, Myofascial Release, Hot Stones, Joint Mobilization, and PNF Stretching.<br><br>
+      The treatments may incorporate various modalities to enhance the effectiveness of the massage and address your specific concerns. These modalities include Trigger Point Therapy, Cupping, Deep tissue, Dry Needling, Myofascial Release, Hot Stones, Joint Mobilization, and PNF Stretching and relaxation techniques.<br><br>
       Before incorporating any of these techniques into your treatment, we will discuss them with you and obtain your consent to ensure that you are comfortable and informed about the process.<br><br>
       Click the links below to learn more about each modality: 
     </p>
@@ -82,10 +82,13 @@
 
  <section class="service-container">
   <button class="cta-button-services active" data-target="cupping">Cupping</button>
+  <button class="cta-button-services" data-target="deep-tissue">Deep tissue</button>
+  <button class="cta-button-services" data-target="relaxation-massage">Relaxation massage</button>
   <button class="cta-button-services" data-target="dry-needling">Dry needling</button>
   <button class="cta-button-services" data-target="myofascial">Myofascial release</button>
   <button class="cta-button-services" data-target="pnf">PNF</button>
   <button class="cta-button-services" data-target="trigger">Trigger poing</button>
+  <button class="cta-button-services" data-target="joint">Joint mobilisation</button>
   <button class="cta-button-services" data-target="hot">Hot stones</button>
  </section>
 
@@ -96,6 +99,51 @@
   <p>The suction created by cupping helps release restrictions and adhesion in the fascia. These adhesion, often caused by injury, poor posture, or repetitive strain, can lead to pain and limited mobility. By lifting and stretching the fascia, cupping enhances its elasticity, improves hydration in the tissue, and promotes better movement and alignment. This process not only alleviates discomfort but also supports the body's natural healing mechanisms.</p><br>
   <p><b>Benefits</b></p><br>
   <p>Cupping involves placing cups on the skin to create a vacuum that gently lifts the underlying tissue.<br>Static Cupping: The cups are placed in fixed positions over specific areas to target deeper layers of tissue and fascia. Dynamic Cupping: The cups are moved across the skin, combining suction with movement. This helps to release fascial tension more broadly, improve range of motion, and stimulate circulation in larger areas.<br>Whether applied for relaxation or targeted therapy, cupping offers a unique way to restore balance and support the body's structural and functional health.</p>
+</div>
+
+<div class="service-text" id="deep-tissue">
+  <p><b>Deep tissue massage</b></p><br>
+  <p>Deep tissue massage is a focused, hands-on technique aimed at releasing tension in the deeper layers of muscle and connective tissue, including the fascia. It works slowly and deliberately, helping to ease long-standing tightness caused by stress, overuse, poor posture, or injuries. Rather than staying on the surface, deep tissue work reaches into the dense, restricted areas of muscle and fascia to restore ease and movement.</p><br>
+  <p><b>How it works</b></p><br>
+  <p>A remedial massage therapist uses steady, methodical pressure with their hands, knuckles, forearms, or elbows to access deeper structures. The pace is slow so the tissue has time to respond. Pressure is firm but always adjusted to the client’s comfort.
+  <br>
+  Deep myofascial work helps soften and lengthen tight muscle fibres while also releasing adhesions and restrictions within the fascial layers. By improving glide between muscles and fascia, the therapist helps reduce rigidity, enhance circulation, and support the body’s ability to heal. Sessions may include stretching, myofascial techniques, or joint movements to further improve mobility and integration.</p><br>
+  <p><b>Benefits</b></p><br>
+  <p>Deep tissue massage can provide many benefits, including:</p>
+  <p>1. <b>Pain relief:</b> Effective for chronic discomfort in the back, neck, shoulders, hips, and other areas.<br>
+  2. <b>Improved mobility:</b> Releasing deeper muscular and fascial restrictions allows smoother, freer movement.<br>
+  3. <b>Reduced muscular and fascial tension:</b> Helps dissolve long-held tightness and adhesions that affect function.<br>
+  4. <b>Better posture and alignment:</b> Addresses deep structural imbalances influenced by shortened muscles and tight fascia.<br>
+  This slow, targeted approach is repeated throughout the session for meaningful, lasting improvement.</p><br>
+  <p><b>Who Is Deep Tissue Massage For?</b></p>
+  <p>This technique is ideal for people experiencing long term or chronic injuries and restrictions, it is a deep technique that can reach very deep muscular layers, the therapist guides the client with a breathing pattern that allows for the deepest fibers to be reached. It is a very effective technique that can dramatically restore a neutral body posture as well as address decades long injuries.</p>
+</div>
+
+<div class="service-text" id="relaxation-massage">
+  <p><b>Relaxation massage</b></p><br>
+
+  <p>Relaxation massage is a gentle, flowing technique designed to calm the nervous system, soothe the body, and reduce overall tension. It uses smooth, rhythmic strokes to promote a sense of ease and comfort. Instead of working into deeper muscular layers, relaxation massage focuses on improving circulation, reducing stress, and helping the body shift into a more restful state.</p><br>
+  
+  <p><b>How it works</b></p><br>
+
+  <p>The therapist applies light to medium pressure using long, gliding strokes, kneading, and gentle movements. The pace is slow and steady, encouraging the body to relax and breathe more freely. The goal is not to target specific restrictions, but to create an overall feeling of softness, warmth, and wellbeing.
+  <br>
+  Relaxation massage helps quiet the mind by engaging the parasympathetic nervous system, lowering muscle tension, and enhancing the body’s natural ability to rest and recover. Sessions may also include gentle stretching or calming techniques to help deepen the sense of relaxation.</p><br>
+
+  <p><b>Benefits</b></p><br>
+
+  <p>Relaxation massage can provide many benefits, including:</p>
+
+  <p>1. <b>Reduced stress:</b> Helps the body unwind, calm the mind, and release emotional tension.<br>
+  2. <b>Improved circulation:</b> Light, rhythmic strokes increase blood flow and promote overall wellbeing.<br>
+  3. <b>Lower muscular tension:</b> Gently eases tightness without the intensity of deeper techniques.<br>
+  4. <b>Enhanced sleep quality:</b> Supports deeper rest by encouraging relaxation of both body and mind.<br>
+  This soothing style of massage helps reset the body’s balance and promotes lasting calm.</p><br>
+
+  <p><b>Who Is Relaxation Massage For?</b></p>
+
+  <p>This technique is ideal for people experiencing stress, mental fatigue, or general tension. It is suitable for anyone who prefers a gentle, calming treatment rather than deep pressure. Relaxation massage is perfect for restoring emotional balance, encouraging deep rest, and supporting overall wellbeing in a peaceful, nurturing way.</p>
+</div>
 
 
  </div>
@@ -151,13 +199,51 @@ Sessions may also involve stretching or movements to help relax the muscles and 
 
 <p><b>Benefits</b></p><br>
 
-<p>Trigger point therapy can provide numerous benefits, including: 1. Pain relief: Particularly effective for chronic pain conditions, such as back, neck, or shoulder pain. 2. Improved mobility: Releasing trigger points allows muscles to move more freely. 3. Reduced referred pain: Addresses pain that may radiate to other areas of the body. 4. Enhanced posture and alignment: Relieves muscle imbalances caused by tight trigger points.<br>
+<p>Trigger point therapy can provide numerous benefits, including:
+<br>
+1. Pain relief: Particularly effective for chronic pain conditions, such as back, neck, or shoulder pain. 
+<br>
+2. Improved mobility: Releasing trigger points allows muscles to move more freely. 
+<br>
+3. Reduced referred pain: Addresses pain that may radiate to other areas of the body. 
+<br>
+4. Enhanced posture and alignment: Relieves muscle imbalances caused by tight trigger points.<br>
 This cycle is repeated several times for optimal results.</p><br>
 
 <p><b>Who Is Trigger Point Therapy For?</b></p><br>
 
 <p>This modality is ideal for anyone experiencing: Muscle pain or tension. Referred pain, such as various headaches caused by neck or shoulder tightness. Postural imbalances due to tight muscles. Chronic conditions like myofascial pain syndrome or fibromyalgia.<br>
 Trigger point therapy offers a targeted, effective approach to managing pain and restoring balance in your body. Whether you're dealing with a specific issue or looking to improve overall muscle function, this therapy can help you feel and move better.</p>
+ </div>
+
+  <div class="service-text" id="joint">
+<p><b>Joint mobilisation</b></p><br>
+<p>A trained and qualified therapist on 'Joint mobilisation' employs their hands to apply specific, controlled movements to the joint. These movements aim to enhance flexibility, alleviate discomfort, and reclaim function in joints that have become stiff or limited due to injury, illness, or excessive use. The process is comfortable and effective. Sessions often include gentle stretching and supportive movements to complement the mobilisation efforts and further promote relaxation within the body.</p><br>
+<p><b>How it works</b></p><br>
+<p>A trained therapist uses their hands, belts, or specific tools to apply joint movement. The techniques are performed with graded mobilisation, sustained hold, and oscillations.<br>
+Sessions may also involve stretching or movements to help relax the muscles and enhance the therapy's effectiveness.</p><br>
+
+<p><b>Benefits</b></p><br>
+
+<p>Joint mobilisation offers numerous advantages, including:</p>
+1. Pain relief: Effective for alleviating discomfort associated with joint stiffness or pain.
+<br>
+2. Improved range of motion: Regular sessions help restore mobility, making daily activities easier
+<br>
+3. Enhanced joint function: Supports the natural mechanics of joints, promoting better overall movement.
+<br>
+4. Reduced muscle tension: Helps to alleviate tightness in muscles surrounding the joint, improving function and comfort.
+</ol>
+
+<p>This process is usually revisited multiple times to ensure lasting results.</p><br>
+
+<p><b>Who Is Joint mobilisation For?</b></p><br>
+
+<p>This technique is suitable for anyone experiencing:<br>
+- Joint pain or stiffness like frozen shoulder.<br>
+- Limited mobility due to past injuries or chronic conditions and very good for hip labral tears.<br>
+- Post-surgical stiffness.<br>
+- Arthritis: Osteoarthritis and rheumatoid arthritis.</p>
  </div>
  
  <div class="service-text" id="hot">
