--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
   </section>
 
   <!-- Body -->
+<section>
+  <h3>&#x1F38A; New opening - 40% off all new clients &#x1F38A;</h3>
+</section>
+
+<section class="new-offer">
+  <p>offer valid until 28 Feb 2026</p>
+</section>
+
   <section class="intro">
     <p>
       <em>As a skilled Remedial Massage Therapist, my purpose is to deliver personalized massage treatments that effectively address your injuries, aches, and pains, ensuring you receive the care you need for optimal recovery and well-being.</em>
