--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
 
   <!-- Body -->
   <section class="content-description-contact">
-    <p>By appointments only on Friday 2 p.m.&ndash; 6:30p.m.</p>
+    <p>By appointments only on Friday 10:00 a.m.&ndash; 5:00 p.m.</p>
     <br>
     <p>If you have any questions, you can contact us via phone or email:</p>
     <br>
