--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
 
   <!-- Author (optional) -->
   <meta name="author" content="Advanced Clinical Body Therapy" />
+
+   <!-- Bing indexing -->
+  <meta name="msvalidate.01" content="D8D15897E4C3F2B516D8165CB6925768" />
 </head>
 <body>
 
@@ -111,3 +114,4 @@
 
 </body>
 </html>
+
