--- a/contact.html
+++ b/contact.html
@@ -53,6 +53,7 @@
     <nav class="nav-links" id="navLinks">
       <a href="about.html">About</a>
       <a href="services.html">Services</a>
+      <a href="courses.html">Courses</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
@@ -143,4 +144,3 @@
 
 </body>
 </html>
-
