--- a/about.html
+++ b/about.html
@@ -52,6 +52,7 @@
     <nav class="nav-links" id="navLinks">
       <a href="about.html">About</a>
       <a href="services.html">Services</a>
+      <a href="courses.html">Courses</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
