--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <!-- Author (optional) -->
   <meta name="author" content="Advanced Clinical Body Therapy" />
 
-   <!-- Bing indexing -->
+  <!-- Bing indexing -->
   <meta name="msvalidate.01" content="D8D15897E4C3F2B516D8165CB6925768" />
 </head>
 <body>
@@ -56,6 +56,7 @@
     <nav class="nav-links" id="navLinks">
       <a href="about.html">About</a>
       <a href="services.html">Services</a>
+      <a href="courses.html">Courses</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
@@ -114,4 +115,3 @@
 
 </body>
 </html>
-
