--- a/courses.html
+++ b/courses.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Explore our Continuing Professional Development courses in Perth including cupping, dry needling, trigger point, myofascial release, and hot stones — tailored to your professional development.">
 
   <!-- Canonical URL (optional but useful) -->
-  <link rel="canonical" href="https://www.advancedclinicalbodytherapy.com.au/services.html" />
+  <link rel="canonical" href="https://www.advancedclinicalbodytherapy.com.au/courses.html" />
 
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="image/icon/apple-touch-icon.png">
