--- a/courses.html
+++ b/courses.html
@@ -100,9 +100,9 @@
   <p>In this intensive, hands-on training, you will learn about:</p>
   <br>
   <p><ul>
-    <li>Active, latent, central and attachment and satellite Myofascial trigger points</li>
+    <li>Muscle anatomy, phisiology, palpation and testing</li>
     <li>Muscle Origin, Insertion, Action, and Palpation</li>
-    <li>Muscle anatomy, palpation and testing</li>
+    <li>Active, latent, central and attachment and satellite Myofascial trigger points</li>
     <li>Myofascial Release</li>
     <li>Proprioceptive Neuromuscular Facilitation (PNF) Stretching</li> 
     <li>Deep Tissue Techniques</li>
@@ -115,7 +115,7 @@
   <br>
  <p>
    <ol>
-    <li><b>Identify and Understand Trigger Points</b>: Recognize the locations and functions of trigger points within various muscle groups and their impact on overall body function.</li>
+    <li><b>Identify and Understand Muscle phisiology and Trigger Points</b>: Recognize the locations and functions of trigger points within various muscle groups and their impact on overall body function.</li>
     <li><b>Demonstrate Palpation Skills</b>: Effectively palpate and evaluate approximately 64 muscles, enhancing assessment and treatment techniques.</li>
     <li><b>Apply Myofascial Release Techniques</b>: Utilize appropriate myofascial release methods to alleviate muscular tension and improve mobility.</li>
     <li><b>Implement PNF Stretching Methods</b>: Integrate Proprioceptive Neuromuscular Facilitation techniques into practice, promoting flexibility and preventing injuries.</li>
