--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Advanced Clinical Body Therapy | Remedial & Relaxation massage in Perth</title>
-  <meta name="description" content="As a skilled Remedial Massage Therapist in Perth, I provide personalised care for pain and injury using cupping, dry needling, trigger point, and myofascial release.">
+  <meta name="description" content="As a skilled Remedial Massage Therapist, I provide personalised care for pain and injury using cupping, dry needling, trigger point, and myofascial release in Beechboro, Perth, Bassendean, Morley, Noranda, Bennet Spring, Bayswater, Kiara, Noranda, Caversham, Lockridge, Eden Hill, Bedford, Guildford, Ashfield, Malaga, Ballajura, Inglewood.">
 
   <!-- Canonical URL (optional but useful) -->
   <link rel="canonical" href="https://www.advancedclinicalbodytherapy.com.au/" />
