--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact | Book Massage at Advanced Clinical Body Therapy</title>
-  <meta name="description" content="Ready to feel better? Book your massage or ask a question — contact Advanced Clinical Body Therapy in Beechboro, Perth today.">
+  <meta name="description" content="Advanced Clinical Body Therapy, Remedial massage in Beechboro, Perth, Bassendean, Morley, Noranda, Bennet Spring, Bayswater, Kiara, Noranda, Caversham, Lockridge, Eden Hill, Bedford, Guildford, Ashfield, Malaga, Ballajura, Inglewood.">
 
   <!-- Canonical URL (optional but useful) -->
   <link rel="canonical" href="https://www.advancedclinicalbodytherapy.com.au/contact.html" />
