--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Services | Cupping, Dry Needling, Remedial Massage in Perth</title>
-  <meta name="description" content="Explore our massage treatments including cupping, dry needling, trigger point, myofascial release, and hot stones — tailored to your recovery.">
+  <meta name="description" content="Explore our massage treatments including cupping, dry needling, trigger point, myofascial release, and hot stones — tailored to your recovery. Get ready for a Remedial massage in Beechboro, Perth, Bassendean, Morley, Noranda, Bennet Spring, Bayswater, Kiara, Noranda, Caversham, Lockridge, Eden Hill, Bedford, Guildford, Ashfield, Malaga, Ballajura, Inglewood.">
 
   <!-- Canonical URL (optional but useful) -->
   <link rel="canonical" href="https://www.advancedclinicalbodytherapy.com.au/services.html" />
